docker compose file for running all services

--- a/reviewer-service/Dockerfile
+++ b/reviewer-service/Dockerfile
@@ -5,19 +5,19 @@ FROM maven:3.9.6-eclipse-temurin-21 AS builder
 # Set working directory
 WORKDIR /app
 
-# Copy parent POM first (for dependency resolution)
+# Copy parent POM and all service POMs
 COPY pom.xml /app/pom.xml
-COPY modules/webhook-ingest/pom.xml /app/modules/webhook-ingest/pom.xml
-COPY modules/reviewer-service/pom.xml /app/modules/reviewer-service/pom.xml
+COPY modules/webhook-ingest/pom.xml /app/webhook-ingest/pom.xml
+COPY modules/reviewer-service/pom.xml /app/reviewer-service/pom.xml
 
 # Download dependencies (this layer will be cached if pom.xml doesn't change)
-RUN mvn dependency:go-offline -f /app/pom.xml -pl modules/reviewer-service
+RUN mvn dependency:go-offline -f /app/pom.xml -pl reviewer-service
 
 # Copy source code
-COPY modules/reviewer-service/src /app/modules/reviewer-service/src
+COPY modules/reviewer-service/src /app/reviewer-service/src
 
 # Build the application
-RUN mvn clean package -f /app/pom.xml -pl modules/reviewer-service -DskipTests
+RUN mvn clean package -f /app/pom.xml -pl reviewer-service -DskipTests
 
 # Stage 2: Runtime stage
 FROM eclipse-temurin:21-jre-alpine
@@ -32,7 +32,7 @@ RUN addgroup -g 1001 appuser && adduser -D -u 1001 -G appuser appuser
 WORKDIR /app
 
 # Copy the built JAR from builder stage
-COPY --from=builder /app/modules/reviewer-service/target/reviewer-service-*.jar app.jar
+COPY --from=builder /app/reviewer-service/target/reviewer-service-*.jar app.jar
 
 # Change ownership to non-root user
 RUN chown -R appuser:appuser /app
