--- a/webhook-ingest/src/main/resources/application.properties
+++ b/webhook-ingest/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=9091
 spring.application.name=webhook-ingest
 
+# Actuator exposure
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+
 # Confluent producer
 kafka.bootstrapServers=${KAFKA_BOOTSTRAPSERVERS}
 kafka.security.protocol=${KAFKA_SECURITY_PROTOCOL}
