--- a/reviewer-service/src/main/resources/application.properties
+++ b/reviewer-service/src/main/resources/application.properties
@@ -10,8 +10,8 @@ webhook.rawDump.enabled=false
 webhook.rawDump.dir=webhook-dumps
 
 # Azure DevOps Configuration
-ado.baseUrl=${ADO_BASE_URL}
-ado.pat=${ADO_PAT}
+# ado.baseUrl=${ADO_BASE_URL}
+# ado.pat=${ADO_PAT}
 
 # PR changes dump
 ado.changesDump.enabled=false
