--- a/k8s/reviewer-service-deployment.yaml
+++ b/k8s/reviewer-service-deployment.yaml
@@ -92,23 +92,27 @@ spec:
               key: OTLP_AUTH_HEADER
         resources:
           requests:
-            memory: "512Mi"
-            cpu: "200m"
+            memory: "256Mi"
+            cpu: "100m"
           limits:
-            memory: "1Gi"
-            cpu: "1000m"
+            memory: "2Gi"
+            cpu: "2000m"
         livenessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 9092
+          initialDelaySeconds: 120
+          periodSeconds: 30
+          timeoutSeconds: 10
+          failureThreshold: 5
+        readinessProbe:
           httpGet:
             path: /actuator/health
             port: 9092
           initialDelaySeconds: 60
           periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /actuator/health
-            port: 9092
-          initialDelaySeconds: 10
-          periodSeconds: 5
+          timeoutSeconds: 5
+          failureThreshold: 10
 ---
 apiVersion: v1
 kind: Service
