--- a/k8s/webhook-ingest-deployment.yaml
+++ b/k8s/webhook-ingest-deployment.yaml
@@ -61,14 +61,18 @@ spec:
           httpGet:
             path: /actuator/health
             port: 9091
-          initialDelaySeconds: 30
-          periodSeconds: 10
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          timeoutSeconds: 10
+          failureThreshold: 5
         readinessProbe:
           httpGet:
             path: /actuator/health
             port: 9091
-          initialDelaySeconds: 5
-          periodSeconds: 5
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 10
 ---
 apiVersion: v1
 kind: Service
